--- a/smooz-setup.yml
+++ b/smooz-setup.yml
@@ -6,3 +6,11 @@
     - name: Install Percona external repo
       yum: name=http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm state=present
 
+    - name: Install virtualenv
+      yum: name="python-virtualenv" state=present
+
+    - name: Install virtualenvwrapper
+      yum: name="python-virtualenvwrapper" state=present
+
+    - name: Install python34
+      yum: name="python34u" state=present
